@@ -1,3 +1,6 @@
+BBmisc_1.11:
+- convertToShortString now also prints the content of expressions, and prints NULL like <NULL>.
+
 BBmisc_1.10:
 - New argument min.versions for requirePackages
 - ensureVector now can be passed multiple classes via cl parameter
